manifests/dev/uptime-kuma/Namespace-uptime-kuma.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: uptime-kuma
