manifests/dev/uptime-kuma/Deployment-uptime-kuma.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: uptime-kuma
    app.kubernetes.io/name: uptime-kuma
  name: uptime-kuma
  namespace: uptime-kuma
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: uptime-kuma
      app.kubernetes.io/name: uptime-kuma
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: uptime-kuma
        app.kubernetes.io/name: uptime-kuma
    spec:
      automountServiceAccountToken: true
      containers:
        - image: louislam/uptime-kuma:2.5.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 60
            initialDelaySeconds: 30
            periodSeconds: 10
            tcpSocket:
              port: 3001
          name: uptime-kuma
          ports:
            - containerPort: 3001
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            tcpSocket:
              port: 3001
          volumeMounts:
            - mountPath: /app/data
              name: data
      serviceAccountName: default
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: uptime-kuma-uptime-kuma-data
