manifests/dev/uptime-kuma/Service-uptime-kuma.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
spec:
  ports:
    - name: http
      port: 3001
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: uptime-kuma
    app.kubernetes.io/name: uptime-kuma
  type: ClusterIP
