manifests/dev/uptime-kuma/Ingress-uptime-kuma.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: uptime-kuma
  namespace: uptime-kuma
spec:
  ingressClassName: traefik
  rules:
    - host: uptime-kuma.home.kronkltd.net
      http:
        paths:
          - backend:
              service:
                name: uptime-kuma
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - uptime-kuma.home.kronkltd.net
      secretName: uptime-kuma-tls
